# 312-repo

./: .gitignore
2-12-20_lecture/: lecture.c
2-17-20/: 2020-02-17-Note-10-46.xoj  lecture.c
2-19-20/: lecture.c
2-26-20/: lecture.c
3-11-2020/: lecture.c
3-2-20_lecture/: 2020-03-02-Note-11-27.xoj  lecture.c
3-30-20_lecture/: 2020-03-30-Note-11-48.xoj
4-1-20_lecture/: 2020-04-01-Note-11-41.xoj  lecture.c  maze.c  vector.c  vector.hpp
4-13-2020_lecture/: lecture.c
4-8_20_lecture/: lecture.cpp  vector.hpp
Labs/Project1_starter_files/: CMakeLists.txt  Project1.cpp  Project1_2.cpp  Project1_jank.cpp  Project1copy.cpp  checkifin.c  concatenatestrings.cpp  extractwords.c  greek-finances.txt  header.txt  letter.c  letter.cpp  main.cpp  proj1_output_duplicates.txt  string_compare.cpp  word.cpp
Labs/Project3_starter_files/: CMakeLists.txt  Project3.cpp
Labs/Project4-CRM/: .~lock.CRM.docx#  CMakeLists.txt  CRM.docx
Labs/Project4-CRM/Project4_starter_files/: CMakeLists.txt  Project4.cpp  header.txt  main.cpp  test1.txt
Labs/Project4-CRM/grading/helper_files/: valgrind_main.cpp
Labs/Project5-Set/: CMakeLists.txt
Labs/project6-recursion/: CMakeLists.txt
Labs/project6-recursion/Project6_starter_files/: CMakeLists.txt  Project6.cpp  main.cpp  q5.c
Quizzes/Quiz_1/: image.c
Recitation/: sort.c
first_lecture/: first_lecture.c
fourth_lecture/: example.c  example_2.c  fourth_lecture.c  fourth_lecture.xoj
second_lecture/: second_lecture.h  second_lecture.xoj  second_lecture_2.xoj
sixth_lecture/: xd.c
third_lecture/: prime.c  third_lecture.xoj
(+47 files in other folders)
